# ogrelamb

./: .gitignore  CMakeLists.txt  README
assets/: capsule.blend  car.blend  cube.blend  cylinder.blend  room.blend  sphere.blend  terrain.blend  wheel.blend
codelite/: ogrelamb.project  ogrelamb.workspace
src/: actions.cpp  actions.h  all.cpp  all.h  camera.cpp  camera.h  character.cpp  character.h  collision.cpp  collision.h  config.cpp  config.h  database.cpp  database.h  framework.cpp  framework.h  log.cpp  log.h  main.cpp  object.cpp  object.h  objectmanager.cpp  objectmanager.h  physics.cpp  physics.h  play.cpp  play.h  state.h  stdafx.cpp  stdafx.h  template.cpp  template.h  templates.cpp  templates.h  terrain.cpp  terrain.h  vehicle.cpp  vehicle.h
tools/colmesh/: main.cpp
working/collision/: room.col  terrain.col
working/meshes/: all.material  capsule.mesh  car.mesh  cube.mesh  cylinder.mesh  fp1.txt  room.mesh  sphere.mesh  terrain.mesh  wheel.mesh
